2006-06-29  Tania Bento  <tbento@redhat.com>

	* java/awt/Container.java
	(applyComponentOrientation): Implemented method.

2006-06-29  Gary Benson  <gbenson@redhat.com>

	* java/io/File.java (listRoots): Merge security checks from libgcj.

2006-06-29  Gary Benson  <gbenson@redhat.com>

	* java/io/FilePermission.java (implies): Work when path is "/".

2006-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/Thread.java:
	(Thread(ThreadGroup,Runnable,String,long)): Update
	state.
	(Thread(VMThread,String,int,boolean)): Likewise.
	(join(long,int)): Likewise.
	(resume()): Likewise.
	(sleep(long,int)): Likewise.
	(start()): Likewise.
	(stop()): Likewise.
	(suspend()): Likewise.
	(die()): Likewise.
	(getState()): Return either state or use VMThread.
	* java/lang/VMThread.java:
	(getState()): Added default implementation to return
	thread.state
	
2006-06-28  Andreas Tobler  <a.tobler@schweiz.ch>

	* gnu/java/awt/peer/gtk/CairoSurface.java: Swap the data from the
	GdkPixbuf correctly on big endian systems. Fix a typo in the little
	endian swapping code.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkImage.c
	(Java_gnu_java_awt_peer_gtk_GtkImage_getPixels): Swap the pixeldata
	without alpha information correctly on big endian systems.

2006-06-28  Roman Kennke  <kennke@aicas.com>

	* gnu/java/net/local/LocalSocket.java
	(setSoTimeout): Don't throw exception and ignore request.
	(getSoTimeout): Don't throw exception and always return 0.

2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(getRegisteredKeyStrokes): Implemented.

2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComponent.java
	(verifyInputWhenFocusTarget): Initialise to true.

2006-06-28  David Gilbert  <david.gilbert@object-refinery.com>

	* java/beans/VetoableChangeSupport.java
	(addVetoableChangeListener(VetoableChangeListener)): Do nothing for
	null listener,